<resources>
    <string name="app_name">Slapp</string>

    <string name="main_sign_up">SIGN UP</string>
    <string name="main_log_in">LOG IN</string>

    <string name="sign_up">Sign up for Slapp</string>
    <string name="sign_up_first_name_hint">First Name</string>
    <string name="sign_up_last_name_hint">Last Name</string>
    <string name="sign_up_email_address_hint">Email Address</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_password_confirm_hint">Confirm Password</string>
    <string name="sign_up_button">SIGN UP</string>

    <string name="log_in">Log in to Slapp</string>
    <string name="log_in_email_address_hint">Email Address</string>
    <string name="log_in_password_hint">Password</string>
    <string name="log_in_button">LOG IN</string>

    <string name="home">Slapp</string>
    <string name="home_active_profile_base">Active Profile: </string>
    <string name="home_active_profile_loading">Active Profile: Loading...</string>
    <string name="home_active_profile_none">Active Profile: None</string>
    <string name="home_toggle_start">Start Service</string>
    <string name="home_toggle_stop">Stop Service</string>
    <string name="home_profiles_header">Profiles</string>

    <string name="add_profile">Add a Profile</string>
    <string name="add_profile_profile_name_hint">Profile Name</string>
    <string name="add_profile_links_header">Links</string>
    <string name="add_profile_first_name_hint">First Name</string>
    <string name="add_profile_last_name_hint">Last Name</string>

    <string name="profile">View Profile</string>

    <string name="action_log_out">Log out</string>


</resources>
