<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.slapp.slapp_android.SignUpActivity"
    android:background="@color/slapp_blue_accent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_etFirstName"
            android:inputType="textPersonName"
            android:hint="@string/sign_up_first_name_hint"
            style="@style/SplashTheme.SplashEditText"
            android:layout_marginTop="0dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_etLastName"
            android:inputType="textPersonName"
            android:hint="@string/sign_up_last_name_hint"
            style="@style/SplashTheme.SplashEditText" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_etEmail"
            android:inputType="textEmailAddress"
            android:hint="@string/sign_up_email_address_hint"
            style="@style/SplashTheme.SplashEditText"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_etPassword"
            android:inputType="textPassword"
            android:hint="@string/sign_up_password_hint"
            style="@style/SplashTheme.SplashEditText"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_etPasswordConfirm"
            android:inputType="textPassword"
            android:hint="@string/sign_up_password_confirm_hint"
            style="@style/SplashTheme.SplashEditText"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign_up_button"
            style="@style/SplashTheme.Button"
            android:layout_marginTop="5dp"
            android:onClick="onButtonClick"/>
    </LinearLayout>

</ScrollView>
