<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.slapp.slapp_android.AddProfileActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_profile_etProfileName"
        android:inputType="textPersonName"
        android:hint="@string/add_profile_profile_name_hint"
        style="@style/HomeTheme.EditText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_profile_tvLinksHeader"
        style="@style/HomeTheme.TextView.Header"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/add_profile_links_header"
        android:layout_below="@id/add_profile_etProfileName"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_profile_tvLinksHeader">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_profile_etFirstNameLink"
                android:inputType="textPersonName"
                android:hint="@string/add_profile_first_name_hint"
                style="@style/HomeTheme.EditText"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_profile_etLastNameLink"
                android:inputType="textPersonName"
                android:hint="@string/add_profile_last_name_hint"
                style="@style/HomeTheme.EditText"/>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_add_white_48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="addProfileOnButtonClick"
        android:id="@+id/add_profile_btnAddProfile"
        elevation="30dp" />
</RelativeLayout>
